# biking-the-big-island

./: .gitignore  README.md  esbuild.config.js  fmt.sh  main.py  package-lock.json  package.json  punalu'u-turtle-monument.md  pyproject.toml
public/: index.html
public/gpx-tracks/: 2022-11-25-kona-to-captain-cook.gpx  2022-11-26-captain-cook-to-naalehu.gpx  2022-11-27-volcanoes.gpx  2022-11-27_07-17_Sun.gpx  2022-11-28_13-41_Mon.gpx  2022-11-29_09-48_Tue.gpx  2022-11-30_11-44_Wed.gpx  2022-12-01_09-44_Thu.gpx  2022-12-02_09-05_Fri.gpx  2022-12-02_11-11_Fri.gpx  2022-12-03_08-26_Sat.gpx  2022-12-04_13-49_Sun.gpx
py/: gpx.py
src/: data.js  images.js  index.js  main.css
