[tool.poetry]
name = "biking-the-big-island"
version = "0.1.0"
description = "Biking around the big island in 9 days"
authors = ["Brian Cappello <briancappello@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "py" },
]

[tool.poetry.dependencies]
python = "^3.10"
exif = "^1.4.0"
gpxpy = "^1.5.0"
requests = "^2.28.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
geographiclib = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98
target-version = ['py310']

[tool.isort]
profile = "black"
lines_between_types = 1
multi_line_output = 3
